figuring out how to do a nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 header {
   background:teal;
-  font-family:Georgia, 'Times New Roman', Times, serif
+  font-family:Georgia, 'Times New Roman', Times, serif, 100px;
+  line-height: 200%
 }
+
 
 
