--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,32 @@
-header {
-  background:teal;
-  font-family:Georgia, 'Times New Roman', Times, serif, 100px;
-  line-height: 200%
+.name {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  width:60px;
+  float: left;
+}
+  .navbar {
+  background-size: 100%;
+  background-color: teal;
+  float: right;
+
+  }
+
 }
 
-nav div {
-  float:right;
-}
 
 img {
-  height: 350px;
-  width: 300px;
+  float: left;
+  padding: 20px 20px;
+}
+
+.summary {
+  text-align: center;
+  font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.box {
+  background-color: white;
+  width: 90%;
+  height: 960px;
+  margin: auto;
+  margin-bottom: 50px;
 }
