--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,34 @@
-.name {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  width:60px;
-  float: left;
+.navbackground {
+background-color: white;
+width: 100%;
+height: 75px;
 }
-  .navbar {
-  background-size: 100%;
-  background-color: teal;
-  float: right;
 
-  }
+  ul {
+ list-style: none;
+ background-color: white;
+ text-align: right;
+}
 
+
+li {
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  height: 40px;
+}
+
+.navbar li {
+
+  display:inline-block;
+  margin-right:-4px;
+}
+
+.navbar a {
+  float: left;
+  color: grey;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 
@@ -28,5 +47,23 @@ img {
   width: 90%;
   height: 960px;
   margin: auto;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  float: left;
+  background-color:teal;
+  color: white;
+
+}
+
+.namebackground {
+  background-color: teal;
+}
+
+.bottomline {
+  width: 100%;
+  border-inline:10px;
+  border-inline-color:red;
 }
